// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState component should match snapshot with variant "404" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24_md p-32_lg"
    >
      <img
        alt="Logo Foodit"
        class="image -mb-8 max-w-87 max-h-91 flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/logo-404.png"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md md:text-left"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Uppps! Contenido en preparación
        </p>
        <p
          class="text text-16 text-light-600 text-center text-start_md md:text-left"
        >
          <p
            class="text-16"
          >
            <span
              class="font-secondary text-secondary-default"
            >
              Mientras te invitamos a seguir navegando en
               
            </span>
            <a
              class="inline-flex text-accent-default hover:opacity-80"
              href="/"
              title="Ir a Foodit"
            >
              Foodit
            </a>
          </p>
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "barrier-logged" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24_md p-32_lg"
    >
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md md:text-left"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          Exclusivo para suscriptores
        </p>
        <p
          class="text text-16 text-light-600 text-center text-start_md md:text-left"
        >
          Para realizar esta acción es necesario que tengas una suscripción.
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg min-h-32 min-h-40_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "barrier-unlogged 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24_md p-32_lg"
    >
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md md:text-left"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          Exclusivo para suscriptores
        </p>
        <p
          class="text text-16 text-light-600 text-center text-start_md md:text-left"
        >
          Para realizar esta acción es necesario que tengas una suscripción.
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg min-h-32 min-h-40_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "empty-state 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24_md p-32_lg"
    >
      <img
        alt="¡Aún no hay nada por acá!"
        class="image -mb-8 max-w-78 max-h-80 md:max-w-94 md:max-h-96 xl:max-w-110 xl:max-h-112 flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/empty-state-recetario.webp"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md md:text-left"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Aún no hay nada por acá!
        </p>
        <p
          class="text text-16 text-light-600 text-center text-start_md md:text-left"
        >
          <span>
            Presioná el botón
            <i
              aria-hidden="true"
              class="ds-icon inline-flex justify-center items-center [&>svg]:size-[inherit] [&>svg]:align-top size-16 data-[has-wrapper="true"]:p-8 pt-6 mx-4"
              data-has-wrapper="false"
              role="presentation"
            >
              <svg
                fill="currentColor"
              >
                <use
                  href="/pf/resources/images/foodit-sprite-critical.svg#bookmark"
                />
              </svg>
            </i>
            GUARDAR en la receta para acceder al contenido cuando quieras y ¡Listo!
          </span>
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg min-h-32 min-h-40_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "search-engine" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24_md p-32_lg"
    >
      <img
        alt="¡Aún no hay nada por acá!"
        class="image -mb-8 max-w-78 max-h-80 md:max-w-94 md:max-h-96 xl:max-w-110 xl:max-h-112 flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/empty-state-recetario.webp"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md md:text-left"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Nada por acá!
        </p>
        <p
          class="text text-16 text-light-600 text-center text-start_md md:text-left"
        >
          <span
            class="font-secondary text-16 text-secondary-default text-center"
          >
            No se encontraron resultados
          </span>
        </p>
      </div>
    </section>
  </div>
</div>
`;
